# ijburg-futsal-regulars

./: .gitignore  b  d  index.html  main.py  pyproject.toml  r  result.py  results.csv
data/: _matches.json  _stats.json  matches.json  stats.json
data/2020-21/: matches.json  stats.json
data/2021-22/: matches.json  stats.json
data/2023-24/: matches.json  stats.json  teams.txt
src/: record_result.py  result.py
